--- a/data2img.html
+++ b/data2img.html
@@ -66,6 +66,52 @@ function drawBinary(binary) {
   location.assign(canvas.toDataURL());
 }
 
+function escapeHtml(str) {
+  return str.replace(/&/g, "&amp;").replace(/</g, "&lt;");
+}
+
+function showData(buffer) {
+  var sb = [];
+  for (var i = 0; i < buffer.length; i++) {
+    if (buffer[i] == 0) break;
+    // the program thinks the data is utf8 encoded
+    var code = 0;
+    if (buffer[i] < 0x80) {
+      sb.push(String.fromCharCode(buffer[i]));
+    }
+    else if (buffer[i] < 0xe0) {
+      code = (buffer[i] & 31) << 6 | (buffer[i+1] & 63);
+      sb.push(String.fromCharCode(code));
+      i += 1;
+    }
+    else if (buffer[i] < 0xf0) {
+      code = (buffer[i] & 15) << 12 | (buffer[i+1] & 63) << 6 | (buffer[i+2] & 63);
+      sb.push(String.fromCharCode(code));
+      i += 2;
+    }
+    else {
+      code = (buffer[i] & 7) << 18 | (buffer[i+1] & 63) << 12 | (buffer[i+2] & 63) << 6 | (buffer[i+3] & 63);
+      sb.push(String.fromCharCode(code));
+      i += 3;
+    }
+  }
+  var out = document.getElementById('out');
+  out.innerHTML = escapeHtml(sb.join(''));
+}
+
+var maxDiff = 0;
+function decodeImg(img) {
+  maxDiff = 0;
+  var buf = [];
+  for (var y = 0; y < IMGHEIGHT / 8; y++) {
+    for (var x = 0; x < IMGWIDTH / 8; x++) {
+      var int16 = decodeChunk(x, y, img);
+      buf.push(int16&0xff, int16>>8);
+    }
+  }
+  return buf;
+}
+
 // data is a 16bit number
 function drawChunk(data, x, y, img) {
   var offset = (x * 8 + y * 8 * IMGWIDTH) * 4;
@@ -85,6 +131,26 @@ function drawChunk(data, x, y, img) {
     img[idx + 7] = 255;
   }
 }
+
+function decodeChunk(x, y, img) {
+  var offset = (x * 8 + y * 8 * IMGWIDTH) * 4;
+  var data = 0;
+  for (var i = 0; i < 16; i++) {
+    var j = i&3, k = i>>2;
+    var idx = offset + (k * 2 * IMGWIDTH + j * 2) * 4;
+    // sum 2x2 square
+    var sum = img[idx + 0] + img[idx + 1] + img[idx + 2];
+    sum += img[idx + 4] + img[idx + 5] + img[idx + 6];
+    idx += IMGWIDTH * 4;
+    sum += img[idx + 0] + img[idx + 1] + img[idx + 2];
+    sum += img[idx + 4] + img[idx + 5] + img[idx + 6];
+    if (sum >= 255 * 6) {
+      data |= 1<<i;
+    }
+    maxDiff = Math.max(Math.abs((sum>=255*6 ? 255*12 : 0) - sum), maxDiff);
+  }
+  return data;
+}
 </script>
 </head>
 <body>
@@ -93,5 +159,7 @@ function drawChunk(data, x, y, img) {
   <p>Choose image to convert: <input type="file" id="fileIn2" accept="image/*"></p>
   <p><button onclick="img2data()">img -> data</button></p>
   <canvas id="canvas" width="960" height="720"></canvas>
+  <p>Decode result:</p>
+  <pre id="out"></pre>
 </body>
 </html>
